{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 30,
  "lineage": "0fcfa994-6f19-66a7-626e-75e37de4d4e5",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:vpc/vpc-0ed914a952e4d885c",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00360d8ee09cfc3b8",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0c245e0b2f28782f3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed914a952e4d885c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03314495ca5fe3a55",
            "owner_id": "406207085797"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051bfa33df3949860",
            "arn": "arn:aws:ec2:us-east-1:406207085797:instance/i-093302e7efed2e778",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2SSMProfile",
            "id": "i-093302e7efed2e778",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0542acff831a328bc",
            "private_dns": "ip-172-31-250-232.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.250.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-089587e476a6ba597",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "MyTerraformInstance-web-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a034e7b755842f95",
            "tags": {
              "Environment": "Development",
              "Name": "MyTerraformInstance-1"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "MyTerraformInstance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098eb20b94a70d688"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_route_table.internal",
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.internal_a",
            "aws_subnet.internal_b",
            "aws_vpc_endpoint.s3",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "data.aws_prefix_list.s3",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051bfa33df3949860",
            "arn": "arn:aws:ec2:us-east-1:406207085797:instance/i-0ab52544cab2ce154",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2SSMProfile",
            "id": "i-0ab52544cab2ce154",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cea7080f61af0bd8",
            "private_dns": "ip-172-31-251-88.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.251.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0df0d2e4aa06cc723",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "MyTerraformInstance-web-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022ba676c36a0ef05",
            "tags": {
              "Environment": "Development",
              "Name": "MyTerraformInstance-2"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "MyTerraformInstance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098eb20b94a70d688"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_route_table.internal",
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.internal_a",
            "aws_subnet.internal_b",
            "aws_vpc_endpoint.s3",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "data.aws_prefix_list.s3",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:406207085797:loadbalancer/app/MyTerraformInstance-alb/45a553fc0b78de80",
            "arn_suffix": "app/MyTerraformInstance-alb/45a553fc0b78de80",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-MyTerraformInstance-alb-1144402224.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:406207085797:loadbalancer/app/MyTerraformInstance-alb/45a553fc0b78de80",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "MyTerraformInstance-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a3d7b74139f6b22a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-022ba676c36a0ef05"
              },
              {
                "subnet_id": "subnet-0a034e7b755842f95"
              }
            ],
            "subnets": [
              "subnet-022ba676c36a0ef05",
              "subnet-0a034e7b755842f95"
            ],
            "tags": {
              "Name": "MyTerraformInstance-alb"
            },
            "tags_all": {
              "Name": "MyTerraformInstance-alb"
            },
            "vpc_id": "vpc-0ed914a952e4d885c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.internal_a",
            "aws_subnet.internal_b",
            "data.aws_availability_zones.available",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:406207085797:listener/app/MyTerraformInstance-alb/45a553fc0b78de80/82f4673fc5da7037",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:406207085797:targetgroup/MyTerraformInstance-tg/26e2bf28da296ac3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:406207085797:listener/app/MyTerraformInstance-alb/45a553fc0b78de80/82f4673fc5da7037",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:406207085797:loadbalancer/app/MyTerraformInstance-alb/45a553fc0b78de80",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.internal_a",
            "aws_subnet.internal_b",
            "data.aws_availability_zones.available",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:406207085797:targetgroup/MyTerraformInstance-tg/26e2bf28da296ac3",
            "arn_suffix": "targetgroup/MyTerraformInstance-tg/26e2bf28da296ac3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:406207085797:targetgroup/MyTerraformInstance-tg/26e2bf28da296ac3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "MyTerraformInstance-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "MyTerraformInstance-tg"
            },
            "tags_all": {
              "Name": "MyTerraformInstance-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ed914a952e4d885c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app_tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:406207085797:targetgroup/MyTerraformInstance-tg/26e2bf28da296ac3-20260705195130102100000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:406207085797:targetgroup/MyTerraformInstance-tg/26e2bf28da296ac3",
            "target_id": "i-093302e7efed2e778"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_instance.web_server",
            "aws_lb_target_group.app_tg",
            "aws_route_table.internal",
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.internal_a",
            "aws_subnet.internal_b",
            "aws_vpc_endpoint.s3",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "data.aws_prefix_list.s3",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:406207085797:targetgroup/MyTerraformInstance-tg/26e2bf28da296ac3-20260705195130152300000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:406207085797:targetgroup/MyTerraformInstance-tg/26e2bf28da296ac3",
            "target_id": "i-0ab52544cab2ce154"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_instance.web_server",
            "aws_lb_target_group.app_tg",
            "aws_route_table.internal",
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.internal_a",
            "aws_subnet.internal_b",
            "aws_vpc_endpoint.s3",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "data.aws_prefix_list.s3",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:route-table/rtb-06fee6f1b1662645f",
            "id": "rtb-06fee6f1b1662645f",
            "owner_id": "406207085797",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "MyTerraformInstance-internal-rt"
            },
            "tags_all": {
              "Name": "MyTerraformInstance-internal-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed914a952e4d885c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internal_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d017cea93ed01db",
            "route_table_id": "rtb-06fee6f1b1662645f",
            "subnet_id": "subnet-0a034e7b755842f95"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.internal",
            "aws_subnet.internal_a",
            "data.aws_availability_zones.available",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internal_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a311febf334edac",
            "route_table_id": "rtb-06fee6f1b1662645f",
            "subnet_id": "subnet-022ba676c36a0ef05"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.internal",
            "aws_subnet.internal_b",
            "data.aws_availability_zones.available",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:security-group/sg-0a3d7b74139f6b22a",
            "description": "Allow inbound HTTP from within the VPC only",
            "egress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "To the web servers",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3d7b74139f6b22a",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "HTTP from within the VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "MyTerraformInstance-alb-sg",
            "name_prefix": "",
            "owner_id": "406207085797",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MyTerraformInstance-alb-sg"
            },
            "tags_all": {
              "Name": "MyTerraformInstance-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed914a952e4d885c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:security-group/sg-098eb20b94a70d688",
            "description": "Allow HTTP from the ALB only; egress limited to VPC + S3 endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "Within the VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS to S3 (package repos) via VPC endpoint",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-63a5400a"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-098eb20b94a70d688",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a3d7b74139f6b22a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "MyTerraformInstance-web-sg",
            "name_prefix": "",
            "owner_id": "406207085797",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MyTerraformInstance-web-sg"
            },
            "tags_all": {
              "Name": "MyTerraformInstance-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed914a952e4d885c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_prefix_list.s3",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "internal_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:subnet/subnet-0a034e7b755842f95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.250.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a034e7b755842f95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "406207085797",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyTerraformInstance-internal-a"
            },
            "tags_all": {
              "Name": "MyTerraformInstance-internal-a"
            },
            "vpc_id": "vpc-0ed914a952e4d885c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "internal_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:subnet/subnet-022ba676c36a0ef05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.251.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022ba676c36a0ef05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "406207085797",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyTerraformInstance-internal-b"
            },
            "tags_all": {
              "Name": "MyTerraformInstance-internal-b"
            },
            "vpc_id": "vpc-0ed914a952e4d885c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:vpc-endpoint/vpce-0bb6f64d2789833a1",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0bb6f64d2789833a1",
            "ip_address_type": "ipv4",
            "owner_id": "406207085797",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-06fee6f1b1662645f"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "MyTerraformInstance-s3-endpoint"
            },
            "tags_all": {
              "Name": "MyTerraformInstance-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0ed914a952e4d885c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.internal",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}